...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/holo_green_dark"
        android:onClick="onLoginClick"
        android:text="@string/login_button"
...
