package Activities;

import android.content.Context;
import android.content.Intent;
import android.net.wifi.WifiManager;

import com.cmput301f18t20.medicalphotorecord.R;
import com.cmput301f18t20.medicalphotorecord.SecurityToken;

import org.junit.After;
import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;

import java.io.FileNotFoundException;
import java.util.concurrent.ExecutionException;

import Activities.ProviderHomeMenuActivity;
import Controllers.ElasticsearchSecurityTokenController;
import Controllers.ElasticsearchShortCodeController;
import Controllers.IOLocalSecurityTokenController;
import androidx.test.rule.ActivityTestRule;

import static Activities.ActivityBank.ClickOnViewProfileAndAssertCorrectActivityAndUser;
import static Activities.ActivityBank.LOGINActivity;
import static Activities.ActivityBank.SignUpAsUser;
import static Activities.ActivityBank.WipeAllUsers;
import static Activities.ActivityBank.changeToTestIndex;
import static Enums.USER_TYPE.PATIENT;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.Espresso.pressBack;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.RootMatchers.withDecorView;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static java.lang.Boolean.FALSE;
import static java.lang.Boolean.TRUE;
import static org.hamcrest.Matchers.is;
import static org.hamcrest.Matchers.not;

public class ProviderHomeMenuActivityTest {

    //TODO initialize this user in the database once (make a @Before method that adds it if a variable
    //TODO is not null, and set the variable to non null once you have added the user
    private String InitialUserIDInIntent = "ProviderHomeMenuActivityTestUser";
    private SecurityToken securityToken;

    private static Boolean UserAdded = FALSE;

    private String
            NewEmail = "NewUserIDForProvider@gmail.com",
            NewPhone = "7805551234";

    @Rule
    // third parameter is set to false which means the activity is not started automatically
    public ActivityTestRule<ProviderHomeMenuActivity> ProviderActivity =
            new ActivityTestRule<>(ProviderHomeMenuActivity.class,
                    false, false);

    @Before
    public void setUp() throws ExecutionException, InterruptedException {
        //change to testing index
        changeToTestIndex();

        //sign up user if they aren't already
        if (UserAdded != TRUE) {
            SignUpUser(InitialUserIDInIntent, R.id.ProviderCheckBox);
        }

        //put the user id into the intent and then start the activity
        Intent i = new Intent();
        i.putExtra("UserID", InitialUserIDInIntent);
        ProviderActivity.launchActivity(i);
    }

    public void SignUpUser(String UserID, int CheckBox) throws InterruptedException, ExecutionException {
        //erase all users from elasticsearch
        WipeAllUsers();

        //Start login activity
        LOGINActivity.launchActivity(new Intent());

        //sign up as specified user
        SignUpAsUser(UserID, CheckBox);

        //If we get here without exceptions, then everything has succeeded
        UserAdded = TRUE;

        //finished with activity
        LOGINActivity.finishActivity();
    }

    @Test
    //Passes
    public void CorrectUserIDDisplayed() {
        //verifies the intent is read correctly and the user id is displayed on screen

        //User ID should be displayed on screen along with Welcome
        onView(withId(R.id.UserIDWelcomeBox)).check(matches(withText("Welcome " + InitialUserIDInIntent)));
    }

    @Test
    //Passes
    public void onEditClickBringsUpEditUserActivityWithCorrectUserID() {
        //verifies that the intent carried the user id to the activity and it was correctly read

        //click on edit contact info button
        onView(withId(R.id.EditContactInfoButton)).perform(click());

        //check userid_edit_id box is visible
        onView(withId(R.id.provider_user_text_id)).check(matches(isDisplayed()));

        //make sure the User ID that we got from the Login intent has been loaded into the
        //intent when transitioning into the edit user id activity.
        onView(withId(R.id.provider_user_text_id)).check(matches(withText(InitialUserIDInIntent)));
    }

    @Test
    //Passes
    public void onListOfPatientsClick() {
        //view a list of assicnged patients for this user
        onView(withId(R.id.ListOfPatientsButton)).perform(click());

        //check add patient button from browse patients list view is visible
        onView(withId(R.id.add_patient_button)).check(matches(isDisplayed()));
    }

    @Test
    //Passes
    public void onViewProfileClickLoadsCorrectUserID() {
        //verifies that the intent carried the user id to the activity and it was correctly read

        ClickOnViewProfileAndAssertCorrectActivityAndUser(InitialUserIDInIntent);
    }

    @Test
    //Passes
    public void onGenerateCodeClickBehavesAsExpected()
            throws InterruptedException, ExecutionException {

        Context context = ProviderActivity.getActivity().getBaseContext();

        //delete all security tokens in local storage and elasticsearch
        new ElasticsearchShortCodeController.DeleteByShortSecurityCodeTask().execute().get();
        IOLocalSecurityTokenController.deleteSecurityTokenOnDisk(context);

        //delete all codes from elasticsearch
        new ElasticsearchSecurityTokenController.DeleteSecurityTokenByUserIDTask().execute().get();

        //click on GenerateLoginCodeButton button to create a code
        onView(withId(R.id.GenerateLoginCodeButton)).perform(click());

        //should produce an error about not being able to load security token
        onView(withText("Unable to load a security token for this user"))
                .inRoot(withDecorView(not(is(
                        ProviderActivity.getActivity()
                                .getWindow()
                                .getDecorView())))).check(matches(isDisplayed()));

        //so lets create a security token
        SecurityToken securityToken = new SecurityToken(InitialUserIDInIntent, PATIENT);

        //and add it to the local storage
        IOLocalSecurityTokenController.saveSecurityTokenToDisk(securityToken, context);

        //click on GenerateLoginCodeButton button to create a code
        onView(withId(R.id.GenerateLoginCodeButton)).perform(click());

        //fetch the short code that's generated
        String shortSecurityCode = ProviderActivity.getActivity()
                .getShortCode().getShortSecurityCode();

        //alert dialog pops up
        onView(withText("Use code " + shortSecurityCode + " to sign in on another phone")).check(matches(isDisplayed()));

    }

    @Test
    //Passes
    public void EditingAUserMaintainsChangesWhileOnline() {
        //TODO perform check that we are online by using (I think) the Sign up controller?
        //TODO maybe move that function to another controller?

        //click on edit contact info button
        onView(withId(R.id.EditContactInfoButton)).perform(click());

        //replace the values
        onView(withId(R.id.provider_email_edit_id)).perform(replaceText(NewEmail));
        onView(withId(R.id.provider_phone_edit_id)).perform(replaceText(NewPhone));

        //save changes
        onView(withId(R.id.provider_save_button_id)).perform(click());

        //go back TODO do we want to press back? or have it return immediately?
        pressBack();

        //click on view contact info button
        onView(withId(R.id.ViewProfileButton)).perform(click());

        //check the views have the correct data
        onView(withId(R.id.EmailBox)).check(matches(withText(NewEmail)));
        onView(withId(R.id.PhoneBox)).check(matches(withText(NewPhone)));
    }
    /*
        @Test
        //fails
        public void EditingAUserMaintainsChangesWhileOffline()
                throws ExecutionException, InterruptedException {
            //TODO perform check that we are online by using (I think) the Sign up controller?
            //TODO maybe move that function to another controller?
    
            setWifiStatus(FALSE);
    
            Thread.sleep(3000);
    
            //click on edit contact info button
            onView(withId(R.id.EditContactInfoButton)).perform(click());
    
            //replace the values
            onView(withId(R.id.email_edit_id)).perform(replaceText(NewEmail));
            onView(withId(R.id.phone_edit_id)).perform(replaceText(NewPhone));
    
            //save changes
            onView(withId(R.id.save_button_id)).perform(click());
    
            //go back TODO do we want to press back? or have it return immediately?
            pressBack();
    
            //click on view contact info button
            onView(withId(R.id.ViewProfileButton)).perform(click());
    
            //check the views have the correct data
            onView(withId(R.id.EmailBox)).check(matches(withText(NewEmail)));
            onView(withId(R.id.PhoneBox)).check(matches(withText(NewPhone)));
        }
    */
    private void setWifiStatus(Boolean status) {
        //start activity and get context
        LOGINActivity.launchActivity(new Intent());
        Context context = LOGINActivity.getActivity().getBaseContext();

        //change status of the wifi
        WifiManager wifiManager = (WifiManager) context.getSystemService(Context.WIFI_SERVICE);
        wifiManager.setWifiEnabled(status);

        //terminate activity
        LOGINActivity.finishActivity();
    }
}